# ksp-commnet-calculator-core

./: Cargo.toml  Makefile  README.md
resources/: antennas.yaml  distances.yaml
src/: antenna.rs  distance.rs  endpoint.rs  error.rs  lib.rs  main.rs  model.rs  util.rs  vessel.rs
src/model/: antenna.rs  distance.rs  vessel.rs
src/usecase/: distance.rs
